# sigrid

./: .gitignore  LICENSE  README.md  dot-env-example  pydap-icechunk.code-workspace  pyproject.toml
catalog-example/: index.py
catalog-example/my-MME/: index.py
catalog-example/my-MME/my-model/: index.py
catalog-example/my-MME/my-model/hindcast/: index.py
catalog/C3S/ECMWF/SEAS51/forecast/: index.py
catalog/C3S/ECMWF/SEAS51/hindcast/: index.py
catalog/NMME/COLA-RSMAS/CCSM4/: index.py
catalog/NMME/COLA-RSMAS/CESM1/: index.py
catalog/NMME/ECCC/CanSIPS-IC4/forecast/: index.py
catalog/NMME/ECCC/CanSIPS-IC4/hindcast/: index.py
catalog/NMME/NASA-GMAO/GEOSS2S/forecast/: index.py
catalog/NMME/NASA-GMAO/GEOSS2S/hindcast/: index.py
catalog/NMME/NOAA-GFDL/SPEAR/forecast/: index.py
catalog/NMME/NOAA-GFDL/SPEAR/hindcast/: index.py
catalog/S2S/ECMF/CY49/REF/CF/: index.py
catalog/S2S/ECMF/CY49/REL/CF/: index.py
catalog/SubC/EMC/GEFSv12/forecast/: index.py
catalog/obs/NOAA-PSL/ERSSTv5/: index.py
icechunker/: README.md  pyproject.toml  update-all  update.py
ingestion/: README.md  preprocess-all  preprocess.py  pyproject.toml
ingestion/src/sigrid/: preprocess.py
ingestion/test/: test_regression.py
pydap-icechunk/: pyproject.toml
pydap-icechunk/src/: cataloging.py
pydap-icechunk/src/pydap_icechunk/: __init__.py  app.py
pydap-icechunk/test/: compare.py  read_opendap.py  server.py  test_ccsr.py
server/: README.md  pyproject.toml
server/client-test/: compare.py  conftest.py  test_ccsr.py
server/cooked-catalog-example/my-MME/: index.py
server/cooked-catalog-example/my-MME/my-model/: index.py
server/cooked-catalog-example/my-MME/my-model/hindcast/: index.py
server/src/sigrid/: harmonize.py
server/src/sigrid/serve/: __init__.py  app.py
server/test/: conftest.py  server.py  test_cataloging.py  test_harmonize.py
src/: app.py  cataloging.py  cataloguing.py  original_units_def.txt  pydap_icechunk.py
src/pydap_icechunk/: __init__.py
test/: compare.py  iridl-vs-ccsr.txt  read_opendap.py  server.py  server_for_test.py  test_cataloging.py  test_ccsr.py
