[project]
name = "pydap-icechunk"
version = "0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


##### pixi

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pydap = ">=3.5.8,<4"
xarray = "*"  # doesn't use semantic versioning
icechunk = ">=2.0.3,<3"
dask = "*"  # doesn't use semantic versioning
cftime = ">=1.6.5,<2"

[tool.pixi.feature.dev.dependencies]
werkzeug = ">=3.1.8,<4"

[tool.pixi.feature.dev.pypi-dependencies]
pydap-icechunk = { path = ".", editable = true }

[tool.pixi.feature.client.dependencies]
# An environment for running test clients. Keeping this environment
# separate from default/prod prevents the server from accidentally becoming
# dependent on libs that we don't install in prod.
netcdf4 = "*"
xarray = "*"
pytest = ">=9.0.3,<10"

[tool.pixi.feature.client.pypi-dependencies]
#recording-proxy = { path = "../recording-proxy", editable = true }
recording-proxy = { git = "ssh://git@github.com/iridl/recording-proxy.git", rev = "a1df94c"}

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "prod"}
prod = {features = [], solve-group = "prod"}
client = {features = ["client"]}

[tool.pixi.tasks]
python = "env $(cat .env) python"


#### pyright

[tool.pyright]
typeCheckingMode = "recommended"
reportUnknownMemberType = false

