[project]
name = "sigrid-ingestion"
version = "0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sigrid"]

[tool.pixi.workspace]
authors = ["IRI <help@iri.columbia.edu>"]
channels = ["conda-forge"]
name = "sigrid-ingestion"
platforms = ["linux-64"]
version = "0.1.0"

[tool.pixi.dependencies]
icechunk = ">=2.0.3,<3"
scipy = ">=1.17.1,<2"
cftime = ">=1.6.5,<2"
netcdf4 = ">=1.7.4,<2"
h5py = ">=3.16.0,<4"
cfgrib = ">=0.9.15.1,<0.10"
tqdm = ">=4.67.3,<5"
rioxarray = ">=0.22.0,<0.23"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3,<10"

[tool.pixi.feature.dev.pypi-dependencies]
sigrid-ingestion = { path = ".", editable = true }

[tool.pixi.environments]
default = {features = ["dev"], solve-group = "default"}
prod = {features = [], solve-group = "default"}

[tool.pixi.tasks]
python = "export $(sed 's/#.*//' ../.env | xargs) && python"
preprocess = "export $(sed 's/#.*//' ../.env | xargs) && python -m sigrid.preprocess"


[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false

